# depositChooser

./: .gitignore  App.cpp  App.h  CMakeLists.txt  DepositAssistant.cpp  DepositAssistant.h  Menu.cpp  Menu.h  Readme.md  User.h  UserDepositManager.cpp  UserDepositManager.h  config.py  db.py  main.cpp  models.py  requirements.txt  server.cpp  server.h  server.py
models/: Deposit.cpp  Deposit.h  User.h
